# flutter_lindera_tantivy

./: .gitignore  CHANGELOG.md  README.ja.md  README.ko.md  README.md  README.zh.md  SEARCH_API.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle.kts
example/: README.md  pubspec.yaml
example/assets/: sample_documents.json
example/integration_test/: simple_test.dart
example/lib/: app.dart  main.dart
example/linux/: CMakeLists.txt
example/windows/: CMakeLists.txt
integration_test/: simple_test.dart
ios/: flutter_lindera_tantivy.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  flutter_lindera_tantivy.dart  main.dart
lib/l10n/: app_en.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_zh.dart  app_zh.arb
lib/providers/: locale_provider.dart  theme_provider.dart  theme_provider.g.dart
lib/screens/: benchmark_page.dart  search_page.dart
lib/services/: benchmark_service.dart  document_loader_service.dart
lib/widgets/: dictionary_selector.dart  language_selector.dart  search_result_card.dart  theme_selector.dart  web_platform_unsupported.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: flutter_lindera_tantivy.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  search.rs  structs.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+54 files in other folders)
