[package]
name = "rust_lib_tantivy_flutter_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tantivy = "0.25.0"
lindera = "1.3.2"
lindera-tantivy = { version = "1.0.3", features = [
    "embedded-ipadic",
#    "embedded-ipadic-neologd",
    "embedded-unidic",
    "embedded-ko-dic",
    "embedded-cc-cedict"
] }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
